# awf

./: .cursorrules  .env  .env.example  .gitignore  README.md  README_ZH.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create-command.sh
app/: main.py
app/api/: dependencies.py
app/api/v1/: __init__.py  execution.py  workflows.py
app/core/: config.py  config_loader.py  logging.py  monitoring.py
app/instances/: models.yaml  tools.yaml
app/instances/agents/: default.yaml  summary_agent.yaml
app/instances/models/: deepseek.yaml  openai.yaml  openrouter.yaml
app/instances/tools/: calculate.yaml  search.yaml  workflow.yaml
app/instances/workflows/: conditional_workflow.yaml  llm_workflow.yaml  parallel_workflow.yaml  summary_workflow.yaml  translation_workflow.yaml
app/models/: agents.py  tools.py  workflows.py
app/services/: agent_executor.py  condition_executor.py  decorators.py  interfaces.py  model_manager.py  parallel_executor.py  tool_manager.py  workflow_executor.py
app/services/providers/: base.py  deepseek_provider.py  openai_provider.py  openrouter_provider.py
app/services/tools/: __init__.py  base.py
app/tools/: base.py  calculate.py  search.py  workflow_tool.py
config/: tools.yaml
examples/: workflow_examples.yaml
tests/: conftest.py  test_api.py  test_model_manager.py  test_workflow_executor.py
tests/core/: test_config.py  test_config_loader.py
tests/services/: test_condition_executor.py  test_model_manager_integration.py  test_parallel_executor.py  test_tool_manager_integration.py  test_workflow_executor.py
tests/services/providers/: test_base_provider.py  test_openrouter_provider.py
tests/services/tools/: test_base_tool.py
